--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
+  "homepage": "https://Gagan6730.github.io/weather-app",
   "name": "hello_world",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.8.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
+    "react-charts": "^2.0.0-alpha.12",
     "react-dom": "^16.8.6",
+    "react-google-maps-loader": "^4.2.5",
+    "react-google-places-autocomplete": "^1.3.1",
+    "react-google-places-suggest": "^3.6.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
